--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server2.js"
   },
   "keywords": [
     "graphql"
@@ -16,10 +16,16 @@
     "apollo-server": "^2.18.2",
     "apollo-server-express": "^1.4.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
+    "firebase-admin": "^9.2.0",
+    "firegraph": "^1.0.12",
     "graphql": "^15.3.0",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tag": "^2.11.0",
     "graphql-tools": "^6.2.4",
+    "graphql-yoga": "^1.18.3",
     "nodemon": "^2.0.6"
   }
 }
