--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "server-graphql",
   "version": "1.0.0",
   "description": "graphql-server",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server2.js"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "graphql"
